# logisim_clone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  project.pbxproj
Logisim(clone)/: enitity_parser.h  framebuffer.h  main.cpp  renderer.h  utility.h
Logisim(clone).xcodeproj/: project.pbxproj
Logisim(clone).xcodeproj/project.xcworkspace/xcuserdata/anirudh.xcuserdatad/: UserInterfaceState.xcuserstate
Logisim(clone).xcodeproj/xcshareddata/xcschemes/: Logisim(clone).xcscheme
Logisim(clone).xcodeproj/xcuserdata/anirudh.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Logisim(clone).xcodeproj/xcuserdata/anirudh.xcuserdatad/xcschemes/: xcschememanagement.plist
Logisim(clone)/Entities/: entity.h  entity_exception.h  global_grid.h  rectangle_entity.h
Logisim(clone)/Entities/gates/: and_gate_entity.h  gate_entity.h  gate_exception.h  nand_gate_entity.h  nor_gate_entity.h  not_gate_entity.h  or_gate_entity.h  socket.h  xnor_gate_entity.h  xor_gate_entity.h
Logisim(clone)/Entities/sockets/: gate_sockets.h  socket.h  switch_sockets.h
Logisim(clone)/Entities/switches/: input_switch_entity.h  output_switch_entity.h  switch_entity.h
Logisim(clone)/Entities/wires/: doubly_linked_list.h  wire_entity.h
Logisim(clone)/Event/: application_event.h  event.h  event_handler.h  key_event.h  mouse_event.h
Logisim(clone)/Logger/: log.h  logger.h  logger_exception.h
Logisim(clone)/PubSub/: publisher.h  subscriber.h
Logisim(clone)/Shaders/: gate_vertex.vs  shader.h  shader_manager.h  switch_vertex.vs  vertex.vs  wire_fragment.fs  wire_vertex.vs
Logisim(clone)/Textures/: stbImage.h  texture.h
Logisim(clone)/ViewportWindows/: playground_viewport_window.h  projectspace_viewport_window.h  toolbar_viewport_window.h  viewport_window.h
resources/entities/: entity_and_gate.txt  entity_input_switch.txt  entity_nand_gate.txt  entity_nor_gate.txt  entity_not_gate.txt  entity_or_gate.txt  entity_output_switch.txt  entity_xnor_gate.txt  entity_xor_gate.txt
resources/shaders/: framebuffer_fragment.fs  gate_fragment.fs  grid_fragment.fs  grid_vertex.vs  socket_fragment.fs  socket_vertex.vs  switch_fragment.fs  wire_vertex.vs
vendors/glew/: INSTALL_RECEIPT.json
vendors/glew/2.2.0_1/.brew/: glew.rb
vendors/glew/2.2.0_1/lib/: libGLEW.2.2.0.dylib
vendors/glew/2.2.0_1/lib/cmake/glew/: glew-targets.cmake
vendors/glfw/3.3.8/: INSTALL_RECEIPT.json
vendors/glfw/3.3.8/.brew/: glfw.rb
vendors/glfw/3.3.8/lib/: libglfw.3.3.dylib
vendors/glfw/3.3.8/lib/pkgconfig/: glfw3.pc
